--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mongodb+srv://Ronaloha:Koukibas10199864@cluster0.ll15c.mongodb.net/sei-cafe-codealong?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://Ronaloha:Koukibas10199864@cluster0.ll15c.mongodb.net/cloud-district-blog?retryWrites=true&w=majority
 SECRET=Steroids
